# dctwin

./: .env.example  .gitignore  README.md  decisions.md  pyproject.toml
catalogs/: tag_catalog.json
docs/: agents.md  architecture.md  local-development.md  ontology.md  principles.md  release-notes.md  schema.md  taxonomy.md  vision.md
docs/sprints/: backlog.md  sprint2.md  sprint3.md  sprint3b.md  sprint4.md  sprint5.md  sprint5b.md  sprint6.md
evaluations/: eval.md
prompts/: cv_to_dct.md  source_adapter_agent.md
schemas/: digital_career_twin.schema.json  enrollment_candidates.schema.json  source_document.schema.json  tag_catalog.schema.json
src/dctwin/: __init__.py  __main__.py  agent.py  auth.py  cli.py  dev.py  doctor.py  foundry.py  io.py  local_env.py  ping.py  privacy.py  providers.py  reconciliation.py  twin_builder.py  validation.py  web.py
src/dctwin/adapters/: __init__.py  base.py  docx_cv.py  pdf_cv.py  registry.py  text_cv.py
src/web/: index.html
tests/: test_agent.py  test_auth.py  test_contracts.py  test_docx_adapter.py  test_privacy.py  test_reconciliation.py  test_text_cv_adapter.py  test_twin_builder.py  test_web_state.py
tests/fixtures/: valid_enrollment_candidates.json  valid_source.json  valid_twin.json
