[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "dctwin"
version = "0.2.0"
description = "Evidence-first Digital Career Twin prototype"
requires-python = ">=3.11"
dependencies = [
  "jsonschema[format]>=4.23,<5",
  "pypdf>=6,<7",
  "python-docx>=1.2,<2"
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]
foundry = [
  "azure-ai-projects>=2.3,<3",
  "azure-identity>=1.25,<2",
  "openai>=2.44,<3"
]

[project.scripts]
dctwin = "dctwin.cli:main"
dctwin-web = "dctwin.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
